fixed nav cropping

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -77,6 +77,7 @@ a {
 .card {
   margin: 2px;
   max-width: 325px;
+  min-width: 300px;
   border: none;
 }
 
@@ -159,7 +160,7 @@ footer {
 }
 
 .carousel-inner .item {
-  height: 45rem;
+  min-height: 90%;
   margin: auto;
 }
 }
@@ -290,7 +291,7 @@ textarea {
   opacity: 0.9; }
   .navbar-light .navbar-nav > li > a {
     font-family: 'Muli', Helvetica;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-weight: 700;
     text-transform: none;
     color: black;
@@ -383,7 +384,7 @@ ol.carousel-indicators li.active {
 
 .projects-control {
   text-shadow: none !important;
-  font-size: 1.5rem !important;
+  font-size: 1.7rem !important;
   width: 50%;
   text-decoration: none;
 
